Adding DTO'S and updated services

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+<!-- Spring Boot Starter Data JPA for Java Persistence API support -->
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+
+		</dependency>
 	</dependencies>
 
 	<build>
